--- a/customize.yaml
+++ b/customize.yaml
@@ -20,3 +20,5 @@ sensor.fgsd002_smoke_sensor_air_temperature:
   friendly_name: Smoke Sensor Temperature
 sensor.ender3_v2_actual_tool0_temp:
   friendly_name: Ender3 V2 actual nozzle temp
+sensor.market_price:
+  friendly_name: Bitcoin price
