--- a/sensor.yaml
+++ b/sensor.yaml
@@ -81,19 +81,22 @@
 #  destination: !secret waze_destination
 #  region: 'EU'
 #  name: "Travel time to work"
+#Stocks
 - platform: alpha_vantage
   api_key: !secret alpha_vantage_api_key
   foreign_exchange:
     - name: EUR_CZK
       from: EUR
       to: CZK
-#Stocks
 - platform: stock_price
   api_key: !secret alpha_vantage_api_key
   symbols:
     - symbol: SIE.DEX
       currency: EUR
       name: Siemens AG
+- platform: bitcoin
+  display_options:
+    - market_price_usd
 #Home Assistant
 - platform: version
   name: latest_version_homeassistant
