--- a/sensor.yaml
+++ b/sensor.yaml
@@ -101,7 +101,8 @@
 - platform: version
   name: latest_version_homeassistant
   source: container
-  beta: true
+  beta: false
+  image: raspberrypi4
 - platform: version
   name: current_version_homeassistant
 #OctoPrint
@@ -147,3 +148,8 @@
   unit_of_measurement: "°C"
   scan_interval: 300
   value_template: "{{ value | multiply(0.001) | round(1) }}"
+- platform: mqtt
+  name: "docker_update_version"
+  state_topic: "diun/docker_version"
+  json_attributes_topic: "diun/docker_version" 
+  value_template: "{{ value_json.image }}"
