--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,6 +14,7 @@ scene: !include scenes.yaml
 sensor: !include sensor.yaml
 binary_sensor: !include binary_sensor.yaml
 light: !include light.yaml
+var: !include variables.yaml
 
 homeassistant:
   customize: !include customize.yaml
