--- a/light.yaml
+++ b/light.yaml
@@ -1,10 +1,7 @@
 # defines other integrations (e.g. switch) as light entities
 - platform: switch
   name: Ikea lamp
-  entity_id: switch.sonoff_b1
-- platform: switch
-  name: Cloud lamp
-  entity_id: switch.sonoff_b2
+  entity_id: switch.ikea_lamp
 - platform: switch
   name: Bedroom lamp
   entity_id: switch.sonoff_ch1
